[package]
name = "kelpdot"
description = "Simple dotfiles manager"
version = "2.1.6"
authors = ["Woomymy <github@woomy.ovh>"]
edition = "2018"
license = "MIT"
homepage = "https://kelp.woomy.ovh"
repository = "https://github.com/Woomymy/kelp"
readme = "README.md"
[dependencies]
anyhow = "1.0.41"
kelpdot_macros = "2.1.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"

[lib]
name = "libkelp"
path = "src/exports.rs"

[profile.release]
lto = "yes" # Enable Link-time-Optimisations
codegen-units = 1 # See https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
