[package]
name = "kelpdot"
description = "Simple dotfiles manager"
version = "2.1.9"
authors = ["Woomymy <woomy@woomy.be>"]
edition = "2018"
license = "MIT"
homepage = "https://kelp.woomy.be"
repository = "https://github.com/Woomymy/kelp"
readme = "README.md"

[dependencies]
anyhow = "1.0.43"
kelpdot_macros = "2.1.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.20"

[lib]
name = "libkelp"
path = "src/exports.rs"

[profile.release]
lto = "yes" # Enable Link-time-Optimisations
codegen-units = 1 # See https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units

[package.metadata.rpm]
package = "kelpdot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
kelpdot = { path = "/usr/bin/kelpdot" }

[package.metadata.deb]
section = "misc"
priority = "optional"
